--- a/c6/6_44.md
+++ b/c6/6_44.md
@@ -29,7 +29,7 @@
 
 所以分别推测了l1缓存，l2缓存，l3缓存的大小分别是64k, 512k和8m
 
-查阅intel文档只看到了说有6m的l3缓存，然后我们在wikichip上看到我们有4个32k的l1d缓存，4个32k的l1i缓存，即128k的l1数据缓存，4\ast256k的l2缓存，即1m的l2缓存，4\ast1.5m的l3缓存，即6m的l3缓存，emmm跟我的预测差好多hhh
+查阅intel文档只看到了说有6m的l3缓存，然后我们在wikichip上看到我们有4个32k的l1d缓存，4个32k的l1i缓存，即128k的l1数据缓存，4\*256k的l2缓存，即1m的l2缓存，4\*1.5m的l3缓存，即6m的l3缓存，emmm跟我的预测差好多hhh
 
 现在回头来看输出的数据，可以看到32k-的时候有着40+GB/s的高速，超过32k后明显下降（一开始我觉得64k算是一个过渡期，所以当做分界点了，但是看数据很明显，除了15步长和小步长64k都明显远远低于32k和16k），256k是第二个分界点，超过他之后，吞吐量再次几乎减半，最后的分界点在4m，超过4m达到8m之后吞吐量再次几乎减半。从以上分析来看可以发现分界点与单核的l1d和l2缓存大小和总体的l3缓存大小接近或者一致。
 
